IE11 support finally removed and can go straight to hell.

--- a/support/index.html
+++ b/support/index.html
@@ -30,7 +30,7 @@ margin-bottom: 3em;
 
 </style>
 
-<p class="effective-date">Last updated <time>April 21, 2021</time></p>
+<p class="effective-date">Last updated <time>November 4, 2021</time></p>
 
 <h2 id="web-standards">Web Standards</h2>
 
@@ -77,7 +77,7 @@ margin-bottom: 3em;
 <p>Corresponding to the date on which your project has launched and due to the vast technical differences in email client software, we test all text and HTML based emails in the following primary email client:</p>
 
 <ul>
-  <li><strong>Gmail Desktop</strong> (Latest browser versions only, except for Internet Explorer 11)</li>
+  <li><strong>Gmail Desktop</strong> (Latest browser versions only)</li>
 </ul>
 
 <p>Additionally, we test all text and HTML based emails on the following email clients. These may have differences in spacing and sizing of elements that vary from the primary testing email client:</p>
@@ -92,19 +92,10 @@ margin-bottom: 3em;
 
 <p>Please note that we do not support browsers that have been modified, run in compatibility mode, or remove code via proxy filtering that is required for the normal operation of your site.</p>
 
-<h2 id="limited-support">Limited Browser Support</h2>
-
-<p>The following browser(s) falls under limited support:</p>
-
-<ul>
-  <li>Internet Explorer 11</li>
-</ul>
-
-<p>This is a base level of support which provides core content, functionality and base styling. Due to a lack of support for more advanced features and styling capabilities in these browsers, issues of an aesthetic nature are not typically addressed unless they directly interfere with the usability of the website. Full support of this browser is by request only. Any questions or concerns regarding this level of support can be communicated to the project's account team.</p>
-
 <h3 id="update-log">Update Log</h3>
 
 <ul>
+  <li><b>November 4, 2021</b> - Internet Explore removed from support.</li>
   <li><b>April 21, 2021</b> - Windows 8/8.1 now only supported by request.</li>
   <li><b>March 1, 2021</b> - iOS 14.x added and iOS 12.x removed from <a href="#operating-system-support">Operating System Support</a>.</li>
   <li><b>March 1, 2021</b> - Android 11.x support added and Android 8.x removed from <a href="#operating-system-support">Operating System Support</a>.</li>
