--- a/support/index.html
+++ b/support/index.html
@@ -95,7 +95,7 @@ margin-bottom: 3em;
 <h3 id="update-log">Update Log</h3>
 
 <ul>
-  <li><b>November 4, 2021</b> - Internet Explore removed from support.</li>
+  <li><b>November 4, 2021</b> - Internet Explore 11 removed from support.</li>
   <li><b>April 21, 2021</b> - Windows 8/8.1 now only supported by request.</li>
   <li><b>March 1, 2021</b> - iOS 14.x added and iOS 12.x removed from <a href="#operating-system-support">Operating System Support</a>.</li>
   <li><b>March 1, 2021</b> - Android 11.x support added and Android 8.x removed from <a href="#operating-system-support">Operating System Support</a>.</li>
