--- a/support/index.html
+++ b/support/index.html
@@ -24,6 +24,7 @@ width: 1px;
 font-weight: 600;
 position: relative;
 padding-left: 1em;
+margin: 2em 0 1em;
 }
 
 #rad-syndicate h2 a, #rad-syndicate h3 a {
@@ -54,88 +55,124 @@ margin-left: 1em;
 margin-bottom: 3em;
 }
 
+#rad-syndicate aside {
+padding-left: 2em;
+}
+
 </style>
 
 <p class="effective-date">Last updated <time>April 1, 2022</time></p>
 
-<h2 id="web-standards">Web Standards <a href="#web-standards"><span aria-hidden="true">#</span><span class="visually-hidden">Anchor</span></a></h2>
+<section id="web-standards">
 
-<p>Our design and development methodologies adhere to standards and guidelines proposed by the <a href="https://www.w3c.org/" data-custom-event="true" data-custom-category="custom event" data-custom-label="W3C">W3C (World Wide Web Consortium)</a> and best practices found within the design and development community. By using the most modern and inclusive techniques available, {{ site.company-name }} can craft an experience that is both engaging and accessible to all users.</p>
+  <h2>Web Standards <a href="#web-standards"><span aria-hidden="true">#</span><span class="visually-hidden">Anchor</span></a></h2>
 
-<p>To learn more about our <a href="https://radancy.dev">design and development standards</a>, please visit us on GitHub.</p>
+  <p>Our design and development methodologies adhere to standards and guidelines proposed by the <a href="https://www.w3c.org/" data-custom-event="true" data-custom-category="custom event" data-custom-label="W3C">W3C (World Wide Web Consortium)</a> and best practices found within the design and development community. By using the most modern and inclusive techniques available, {{ site.company-name }} can craft an experience that is both engaging and accessible to all users.</p>
 
-<h2 id="accessibility">Accessibility <a href="#accessibility"><span aria-hidden="true">#</span><span class="visually-hidden">Anchor</span></a></h2>
+  <p>To learn more about our <a href="https://radancy.dev">design and development standards</a>, please visit us on GitHub.</p>
 
-<p>At {{ site.company-name }}, we believe that all of your prospective job candidates, regardless of physical, mental or technological capabilities, have a right to learn more about your company and access all job listings. To preserve an individual’s right to universal access, <a href="https://radancy.dev/a11y/baseline/">we attempt to meet</a> as much of <strong>WCAG (Web Content and Accessibility Guidelines) 2.1 Level A and AA</strong> as possible, within our everyday process. However, if there is a need to fully support a specific level of WCAG or other specific guidelines, please bring this to the attention of your account representative as soon as possible.</p>
+</section>
 
-<h3 id="accessibility-overlay">A Note on Accessibility Overlays <a href="#accessibility-overlays"><span aria-hidden="true">#</span><span class="visually-hidden">Anchor</span></a></h3>
+<section id="accessibility">
 
-<p>Accessibility overlays are <em>strongly discouraged</em> and not in line with Radancy's vision on how best to support people with disabilities in our digital offerings. In our experience, use of these tools may promote ableism, reinforce discrimination and are often perceived, particularly among the disabled and advocacy communities, as a performative commitment to accessibility. Companies using overlays have frequently been subjected to legal actions based on non-compliance with accessibility laws and principles. Upon request, we are happy to share materials addressing the challenges faced by users of overlays.</p>
+  <h2>Accessibility <a href="#accessibility"><span aria-hidden="true">#</span><span class="visually-hidden">Anchor</span></a></h2>
 
-<p>If you would like to discuss this issue, along with more proactive, friendly, and sustainable ways to make your careers site accessible to everybody, please reach out to your account representative.</p>
+  <p>At {{ site.company-name }}, we believe that all of your prospective job candidates, regardless of physical, mental or technological capabilities, have a right to learn more about your company and access all job listings. To preserve an individual’s right to universal access, <a href="https://radancy.dev/a11y/baseline/">we attempt to meet</a> as much of <strong>WCAG (Web Content and Accessibility Guidelines) 2.1 Level A and AA</strong> as possible, within our everyday process. However, if there is a need to fully support a specific level of WCAG or other specific guidelines, please bring this to the attention of your account representative as soon as possible.</p>
 
-<h2 id="operating-system-support">Operating System Support <a href="#operating-system-support"><span aria-hidden="true">#</span><span class="visually-hidden">Anchor</span></a></h2>
+  <aside id="accessibility-overlay">
 
-<p>{{ site.company-name }} supports applications on the following operating systems only:</p>
+    <h3>A Note on Accessibility Overlays <a href="#accessibility-overlays"><span aria-hidden="true">#</span><span class="visually-hidden">Anchor</span></a></h3>
 
-<ul>
-  <li>Windows 10</li>
-  <li>Windows 8/8.1 (Upon Request Only)</li>
-  <li>macOS 10.15 (Catalina)</li>
-  <li>iOS 14.x</li>
-  <li>iOS 13.x</li>
-  <li>Android 11.x</li>
-  <li>Android 10.x</li>
-  <li>Android 9.x</li>
-</ul>
+    <p>Accessibility overlays are <strong>strongly discouraged</strong> and not in line with Radancy's vision on how best to support people with disabilities in our digital offerings. In our experience, use of these tools may promote ableism, reinforce discrimination and are often perceived, particularly among the disabled and advocacy communities, as a performative commitment to accessibility. Companies using overlays have frequently been subjected to legal actions based on non-compliance with accessibility laws and principles. Upon request, we are happy to share materials addressing the challenges faced by users of overlays.</p>
 
-<h2 id="browser-support">Browser Support <a href="#browser-support"><span aria-hidden="true">#</span><span class="visually-hidden">Anchor</span></a></h2>
+    <p>If you would like to discuss this issue, along with more proactive, friendly, and sustainable ways to make your careers site accessible to everybody, please reach out to your account representative.</p>
 
-<p>{{ site.company-name }} supports the <strong>current</strong> and <strong>prior major</strong> release versions of all major browsers. Corresponding to the date on which your project has launched, we test all work in the following:</p>
+  </aside>
 
-<ul>
-  <li><a href="https://www.chromestatus.com/features" data-custom-event="true" data-custom-category="custom event" data-custom-label="Google Chrome">Google Chrome</a></li>
-  <li><a href="https://www.mozilla.org/en-US/firefox/releases/" data-custom-event="true" data-custom-category="custom event" data-custom-label="Mozilla Firefox">Mozilla Firefox</a></li>
-  <li><a href="https://developer.apple.com/documentation/safari_release_notes/" data-custom-event="true" data-custom-category="custom event" data-custom-label="Apple Safari">Apple Safari</a></li>
-  <li><a href="https://docs.microsoft.com/en-us/deployedge/microsoft-edge-relnote-stable-channel/" data-custom-event="true" data-custom-category="custom event" data-custom-label="Microsoft Edge">Microsoft Edge</a></li>
-</ul>
+<section>
 
-<p>Our development team analyzes global <a href="https://gs.statcounter.com/" data-custom-event="true" data-custom-category="custom event" data-custom-label="browser market share">browser market share</a> and client web traffic data on a quarterly basis. Web browser support ends when that browser represents less than 5% of all market share and/or web traffic.</p>
+<section id="operating-system-support">
 
-<p>We do not, as a matter of course, support browsers that are not listed within this document. Should your users or company's browser needs differ, please consult your account representative immediately.</p>
+  <h2>Operating System Support <a href="#operating-system-support"><span aria-hidden="true">#</span><span class="visually-hidden">Anchor</span></a></h2>
 
-<h2 id="email-support">Email Support <a href="#email-support"><span aria-hidden="true">#</span><span class="visually-hidden">Anchor</span></a></h2>
+  <p>{{ site.company-name }} supports applications on the following operating systems only:</p>
 
-<p>Corresponding to the date on which your project has launched and due to the vast technical differences in email client software, we test all text and HTML based emails in the following primary email client:</p>
+  <ul>
+    <li>Windows 10</li>
+    <li>Windows 8/8.1 (Upon Request Only)</li>
+    <li>macOS 10.15 (Catalina)</li>
+    <li>iOS 14.x</li>
+    <li>iOS 13.x</li>
+    <li>Android 11.x</li>
+    <li>Android 10.x</li>
+    <li>Android 9.x</li>
+  </ul>
 
-<ul>
-  <li><strong>Gmail Desktop</strong> (Latest browser versions only)</li>
-</ul>
+</section>
 
-<p>Additionally, we test all text and HTML based emails on the following email clients. These may have differences in spacing and sizing of elements that vary from the primary testing email client:</p>
+<section id="browser-support">
 
-<ul>
-  <li><strong>Outlook</strong> (Latest version of Outlook on Windows 10 only) [Does not support responsive emails]</li>
-  <li><strong>iPhone</strong> (Latest version of iOS Mail only) [Not all designs can be built responsively]</li>
-  <li><strong>Gmail Android</strong> (Upon Request Only) [Not all designs can be built responsively]</li>
-</ul>
+  <h2>Browser Support <a href="#browser-support"><span aria-hidden="true">#</span><span class="visually-hidden">Anchor</span></a></h2>
 
-<h2 id="modified-browsers">Modified Browsers <a href="#modified-browsers"><span aria-hidden="true">#</span><span class="visually-hidden">Anchor</span></a></h2>
+  <p>{{ site.company-name }} supports the <strong>current</strong> and <strong>prior major</strong> release versions of all major browsers. Corresponding to the date on which your project has launched, we test all work in the following:</p>
 
-<p>Please note that we do not support browsers that have been modified, run in compatibility mode, or remove code via proxy filtering that is required for the normal operation of your site.</p>
+  <ul>
+    <li><a href="https://www.chromestatus.com/features" data-custom-event="true" data-custom-category="custom event" data-custom-label="Google Chrome">Google Chrome</a></li>
+    <li><a href="https://www.mozilla.org/en-US/firefox/releases/" data-custom-event="true" data-custom-category="custom event" data-custom-label="Mozilla Firefox">Mozilla Firefox</a></li>
+    <li><a href="https://developer.apple.com/documentation/safari_release_notes/" data-custom-event="true" data-custom-category="custom event" data-custom-label="Apple Safari">Apple Safari</a></li>
+    <li><a href="https://docs.microsoft.com/en-us/deployedge/microsoft-edge-relnote-stable-channel/" data-custom-event="true" data-custom-category="custom event" data-custom-label="Microsoft Edge">Microsoft Edge</a></li>
+  </ul>
 
-<h3 id="update-log">Update Log <a href="#update-log"><span aria-hidden="true">#</span><span class="visually-hidden">Anchor</span></a></h3>
+  <p>Our development team analyzes global <a href="https://gs.statcounter.com/" data-custom-event="true" data-custom-category="custom event" data-custom-label="browser market share">browser market share</a> and client web traffic data on a quarterly basis. Web browser support ends when that browser represents less than 5% of all market share and/or web traffic.</p>
 
-<ul>
-  <li><b>April 1, 2022</b> - Added note on Accessibility Overlays.</li>
-  <li><b>November 4, 2021</b> - Internet Explorer 11 removed from support.</li>
-  <li><b>April 21, 2021</b> - Windows 8/8.1 now only supported by request.</li>
-  <li><b>March 1, 2021</b> - iOS 14.x added and iOS 12.x removed from <a href="#operating-system-support">Operating System Support</a>.</li>
-  <li><b>March 1, 2021</b> - Android 11.x support added and Android 8.x removed from <a href="#operating-system-support">Operating System Support</a>.</li>
-  <li><b>September 25, 2020</b> - Updated <a href="#email-support">Email Support</a>.</li>
-  <li><b>April 28, 2020</b> - Android 10.x and Android 9.x added and Android 7.x and Android 6.x removed from <a href="#operating-system-support">Operating System Support</a>.</li>
-  <li><b>March 14, 2020</b> - macOS 10.15 (Catalina) support added and macOS 10.14 (Mojave) removed from <a href="#operating-system-support">Operating System Support</a>.</li>
-  <li><b>March 1, 2020</b> - iOS 13.x added and iOS 12.x removed from <a href="#operating-system-support">Operating System Support</a>.</li>
-  <li><b>January 1, 2020</b> - Internet Explorer 11 added to <a href="#limited-support">Limited Support</a>.</li>
-  <li><b>March 4, 2019</b> - macOS 10.14 (Mojave) added and macOS 10.12 (Sierra) removed from <a href="#operating-system-support">Operating System Support</a>.</li>
-</ul>
+  <p>We do not, as a matter of course, support browsers that are not listed within this document. Should your users or company's browser needs differ, please consult your account representative immediately.</p>
+
+</section>
+
+<section id="email-support">
+
+  <h2>Email Support <a href="#email-support"><span aria-hidden="true">#</span><span class="visually-hidden">Anchor</span></a></h2>
+
+  <p>Corresponding to the date on which your project has launched and due to the vast technical differences in email client software, we test all text and HTML based emails in the following primary email client:</p>
+
+  <ul>
+    <li><strong>Gmail Desktop</strong> (Latest browser versions only)</li>
+  </ul>
+
+  <p>Additionally, we test all text and HTML based emails on the following email clients. These may have differences in spacing and sizing of elements that vary from the primary testing email client:</p>
+
+  <ul>
+    <li><strong>Outlook</strong> (Latest version of Outlook on Windows 10 only) [Does not support responsive emails]</li>
+    <li><strong>iPhone</strong> (Latest version of iOS Mail only) [Not all designs can be built responsively]</li>
+    <li><strong>Gmail Android</strong> (Upon Request Only) [Not all designs can be built responsively]</li>
+  </ul>
+
+</section>
+
+<section id="modified-browsers">
+
+  <h2>Modified Browsers <a href="#modified-browsers"><span aria-hidden="true">#</span><span class="visually-hidden">Anchor</span></a></h2>
+
+  <p>Please note that we do not support browsers that have been modified, run in compatibility mode, or remove code via proxy filtering that is required for the normal operation of your site.</p>
+
+</section>
+
+<section id="update-log">
+
+  <h3>Update Log <a href="#update-log"><span aria-hidden="true">#</span><span class="visually-hidden">Anchor</span></a></h3>
+
+  <ul>
+    <li><b>April 1, 2022</b> - Added note on Accessibility Overlays.</li>
+    <li><b>November 4, 2021</b> - Internet Explorer 11 removed from support.</li>
+    <li><b>April 21, 2021</b> - Windows 8/8.1 now only supported by request.</li>
+    <li><b>March 1, 2021</b> - iOS 14.x added and iOS 12.x removed from <a href="#operating-system-support">Operating System Support</a>.</li>
+    <li><b>March 1, 2021</b> - Android 11.x support added and Android 8.x removed from <a href="#operating-system-support">Operating System Support</a>.</li>
+    <li><b>September 25, 2020</b> - Updated <a href="#email-support">Email Support</a>.</li>
+    <li><b>April 28, 2020</b> - Android 10.x and Android 9.x added and Android 7.x and Android 6.x removed from <a href="#operating-system-support">Operating System Support</a>.</li>
+    <li><b>March 14, 2020</b> - macOS 10.15 (Catalina) support added and macOS 10.14 (Mojave) removed from <a href="#operating-system-support">Operating System Support</a>.</li>
+    <li><b>March 1, 2020</b> - iOS 13.x added and iOS 12.x removed from <a href="#operating-system-support">Operating System Support</a>.</li>
+    <li><b>January 1, 2020</b> - Internet Explorer 11 added to <a href="#limited-support">Limited Support</a>.</li>
+    <li><b>March 4, 2019</b> - macOS 10.14 (Mojave) added and macOS 10.12 (Sierra) removed from <a href="#operating-system-support">Operating System Support</a>.</li>
+  </ul>
+
+</section>
