--- a/support/index.html
+++ b/support/index.html
@@ -20,6 +20,14 @@ white-space: nowrap;
 width: 1px;
 }
 
+#rad-syndicate section {
+padding: 1em;
+}
+
+#rad-syndicate aside {
+padding-left: 2em;
+}
+
 #rad-syndicate h2, #rad-syndicate h3 {
 font-weight: 600;
 position: relative;
@@ -53,10 +61,6 @@ margin-left: 1em;
 
 #rad-syndicate #update-log + ul {
 margin-bottom: 3em;
-}
-
-#rad-syndicate aside {
-padding-left: 2em;
 }
 
 </style>
