--- a/support/index.html
+++ b/support/index.html
@@ -21,7 +21,12 @@ width: 1px;
 }
 
 #rad-syndicate section {
+border-radius: 10px;
 padding: 1em;
+}
+
+#rad-syndicate section:target {
+background-color: #eee;
 }
 
 #rad-syndicate aside {
@@ -32,7 +37,7 @@ padding-left: 2em;
 font-weight: 600;
 position: relative;
 padding-left: 1em;
-margin: 2em 0 1em;
+margin: 1em 0 1em;
 }
 
 #rad-syndicate h2 a, #rad-syndicate h3 a {
