--- a/support/index.html
+++ b/support/index.html
@@ -20,6 +20,10 @@ white-space: nowrap;
 width: 1px;
 }
 
+#rad-syndicate {
+margin-bottom: 2em;
+}
+
 #rad-syndicate section, #rad-syndicate aside {
 border-radius: 10px;
 padding: 1em;
