--- a/support/index.html
+++ b/support/index.html
@@ -35,7 +35,7 @@ background-color: #eee;
 }
 
 #rad-syndicate aside {
-margin-left: 1em;
+margin: 1em 0 0 1em;
 }
 
 #rad-syndicate aside.warning:target {
