--- a/support/index.html
+++ b/support/index.html
@@ -103,7 +103,7 @@ margin-bottom: 3em;
 
     <h3>A Note on Accessibility Overlays <a href="#accessibility-overlays"><span aria-hidden="true">#</span><span class="visually-hidden">Anchor</span></a></h3>
 
-    <p>Accessibility overlays are <strong>strongly discouraged</strong> and not in line with Radancy's vision on how best to support people with disabilities in our digital offerings. In our experience, use of these tools may promote ableism, reinforce discrimination and are often perceived, particularly among the disabled and advocacy communities, as a performative commitment to accessibility. Companies using overlays have frequently been subjected to legal actions based on non-compliance with accessibility laws and principles. Upon request, we are happy to share materials addressing the challenges faced by users of overlays.</p>
+    <p>Accessibility overlays are <strong>strongly discouraged</strong> and not in line with Radancy's vision on how best to support people with disabilities in our digital offerings. In our experience, use of these tools may promote ableism, reinforce discrimination and are often perceived, particularly among the disabled and advocacy communities, as a performative commitment to accessibility. Companies using overlays have frequently been subjected to legal actions based on non-compliance with accessibility laws and principles. Upon request, we are happy to share materials addressing the challenges faced by users of websites that include overlays.</p>
 
     <p>If you would like to discuss this issue, along with more proactive, friendly, and sustainable ways to make your careers site accessible to everybody, please reach out to your account representative.</p>
 
