--- a/support/index.html
+++ b/support/index.html
@@ -81,7 +81,7 @@ margin-bottom: 3em;
 
 </style>
 
-<p class="effective-date">Last updated <time>April 1, 2022</time></p>
+<p class="effective-date">Last updated <time>August 16, 2022</time></p>
 
 <section id="web-standards">
 
@@ -103,7 +103,7 @@ margin-bottom: 3em;
 
     <h3>A Note on Accessibility Overlays <a href="#accessibility-overlays"><span aria-hidden="true">#</span><span class="visually-hidden">Anchor</span></a></h3>
 
-    <p>Accessibility overlays are <strong>strongly discouraged</strong> and not in line with Radancy's vision on how best to support people with disabilities in our digital offerings. In our experience, use of these tools may promote ableism, reinforce discrimination and are often perceived, particularly among the disabled and advocacy communities, as a performative commitment to accessibility. Companies using overlays have frequently been subjected to legal actions based on non-compliance with accessibility laws and principles. Upon request, we are happy to share materials addressing the challenges faced by users of websites that include overlays.</p>
+    <p>Accessibility overlays are <strong>not supported</strong>, as they are not in line with Radancy's vision on how best to support people with disabilities in our digital offerings. In our experience, use of these tools may promote ableism, reinforce discrimination and are often perceived, particularly among the disabled and advocacy communities, as a performative commitment to accessibility. Companies using overlays have frequently been subjected to legal actions based on non-compliance with accessibility laws and principles. Upon request, we are happy to share materials addressing the challenges faced by users of websites that include overlays.</p>
 
     <p>If you would like to discuss this issue, along with more proactive, friendly, and sustainable ways to make your careers site accessible to everybody, please reach out to your account representative.</p>
 
@@ -182,8 +182,9 @@ margin-bottom: 3em;
   <h3>Update Log <a href="#update-log"><span aria-hidden="true">#</span><span class="visually-hidden">Anchor</span></a></h3>
 
   <ul>
+    <li><b>August 16, 2022</b> - Changed "strongly discouraged" to "not supported" on <a href="#accessibility-overlays">Accessibility Overlays</a>.</li>
     <li><b>April 1, 2022</b> - Added note on Accessibility Overlays.</li>
-    <li><b>November 4, 2021</b> - Internet Explorer 11 removed from support.</li>
+    <li><b>November 4, 2021</b> - Internet Explorer 11 removed from <a href="#operating-system-support">Operating System Support</a>.</li>
     <li><b>April 21, 2021</b> - Windows 8/8.1 now only supported by request.</li>
     <li><b>March 1, 2021</b> - iOS 14.x added and iOS 12.x removed from <a href="#operating-system-support">Operating System Support</a>.</li>
     <li><b>March 1, 2021</b> - Android 11.x support added and Android 8.x removed from <a href="#operating-system-support">Operating System Support</a>.</li>
