--- a/uid/bookmarklet/index.html
+++ b/uid/bookmarklet/index.html
@@ -8,3 +8,8 @@ title: "Useful Bookmarklets"
 <a class="btn" href="javascript: (function () { var jsCode = document.createElement('script'); jsCode.setAttribute('src', 'https://radancy.dev/uid/bookmarklet/automated-publish.js'); document.body.appendChild(jsCode);}());">Site Admin Publish</a>
 
 <p>Used to automate publishing in Site Admin. Will publish 10 files at a time until finished.</p>
+
+<a class="btn" href="javascript: (function () { var jsCode = document.createElement('script'); jsCode.setAttribute('src', 'https://radancy.dev/uid/bookmarklet/sitemap.js'); document.body.appendChild(jsCode);}());">Get Career Site Page</a>
+
+<p>Used to retrieve a list of all pages on a careers site.</p>
+
