--- a/uid/bookmarklet/index.html
+++ b/uid/bookmarklet/index.html
@@ -9,7 +9,6 @@ title: "Useful Bookmarklets"
 
 <p>Used to automate publishing in Site Admin. Will publish 10 files at a time until finished.</p>
 
-<a class="btn" href="javascript: (function () { var jsCode = document.createElement('script'); jsCode.setAttribute('src', 'https://radancy.dev/uid/bookmarklet/sitemap.js'); document.body.appendChild(jsCode);}());">Get Career Site Page</a>
+<a class="btn" href="javascript: (function () { var jsCode = document.createElement('script'); jsCode.setAttribute('src', 'https://radancy.dev/uid/bookmarklet/sitemap.js'); document.body.appendChild(jsCode);}());">Get Career Site Pages</a>
 
 <p>Used to retrieve a list of all pages on a careers site.</p>
-
